[project]
name = "advent_of_code"
version = "0.1.0"
description = "Advent of Code solutions in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.0",
    "pytest-asyncio>=0.25.0",
    "pytest>=8.3.4",
    "rich>=13.9.4",
    "tqdm>=4.67.1",
    "types-tqdm>=4.67.0.20241119",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/twenty_four"]

[tool.pytest.ini_options]
pythonpath = [
  "src", "tests"
]
addopts = ["--import-mode=importlib", ]

[project.scripts]
twenty-four = "twenty_four:main"
